data/derived/comb/progs/unify/prog1476.ml.out
Characters 10-19:
  let (a,b)=[1;2;3;4];;
            ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
